// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Nav /> renders Nav component with isAuth props 1`] = `
<nav>
  <ul
    className="Navigation"
  >
    <li
      className="NavigationListItem"
    >
      <a
        aria-current="page"
        className="NavigationLink active"
        href="/"
        onClick={[Function]}
        style={
          Object {
            "color": "#0900DB",
          }
        }
      >
        Home
      </a>
    </li>
    <li
      className="NavigationListItem"
    >
      <a
        aria-current={null}
        className="NavigationLink"
        href="/shop"
        onClick={[Function]}
      >
        Shop
      </a>
    </li>
    <li
      className="NavigationListItem"
    >
      <a
        aria-current={null}
        className="NavigationLink"
        href="/cart"
        onClick={[Function]}
      >
        Cart
      </a>
    </li>
    <li
      className="NavigationListItem"
    >
      <button
        className="NavigationLogoutButton"
        onClick={[Function]}
        type="button"
      >
        Logout
      </button>
    </li>
  </ul>
</nav>
`;

exports[`<Nav /> renders Nav component without isAuth props 1`] = `
<nav>
  <ul
    className="Navigation"
  >
    <li
      className="NavigationListItem"
    >
      <a
        aria-current={null}
        className="NavigationLink"
        href="/signup"
        onClick={[Function]}
      >
        Signup
      </a>
    </li>
    <li
      className="NavigationListItem"
    >
      <a
        aria-current={null}
        className="NavigationLink"
        href="/login"
        onClick={[Function]}
      >
        Login
      </a>
    </li>
  </ul>
</nav>
`;
